<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:gravity="center_vertical"
	android:background="@drawable/login_bg">

	<!-- Email Address Text and Text Box -->
	<TextView 
		android:id="@+id/username_text" 
		android:paddingTop="180dip"
		android:text="@string/email"
		android:textColor="#423832"
		android:layout_centerHorizontal="true" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/welcome_text" />

	<EditText 
		android:id="@+id/txt_username"
		android:layout_height="wrap_content" 
		android:layout_width="350px"
		android:layout_centerHorizontal="true" 
		android:layout_below="@+id/username_text"
		android:singleLine="true" />
	<!-- End Email Address -->

	<!-- Password Text and Text Box -->
	<TextView 
		android:id="@+id/password_text" 
		android:text="@string/password"
		android:textColor="#423832"
		android:layout_centerHorizontal="true" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/txt_username" />

	<EditText 
		android:id="@+id/txt_password" 
		android:password="true"
		android:layout_height="wrap_content" 
		android:layout_width="350px"
		android:layout_centerHorizontal="true" 
		android:layout_below="@+id/password_text"
		android:singleLine="true" />
	<!-- End Password -->

	<!-- Login Button -->
	<Button 
		android:id="@+id/login_button" 
		android:text="Login"
		android:layout_width="200dip" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" 
		android:layout_below="@+id/txt_password" />
	<!-- End Login Button -->
	
	<!-- Register Text and Button -->
	<TextView 
		android:id="@+id/register_text" 
		android:paddingTop="50dip"
		android:text="@string/register"
		android:textColor="#423832"
		android:layout_centerHorizontal="true" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/login_button" />

	<Button 
		android:id="@+id/register_button" 
		android:text="Register"
		android:layout_width="200dip" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" 
		android:layout_below="@+id/register_text" />
	<!-- End Register -->

</RelativeLayout>
